# unicloud-rust

./: Cargo.toml  Procfile  readme.md
backend/: .env.example  .sea-orm.json  Cargo.toml  results.txt
backend/api/: .env.example  Cargo.toml
backend/api/src/: app_errors.rs  db_connect.rs  export_envs.rs  main.rs
backend/api/src/handlers/auth/: add_google_drive.rs  jwt_config.rs  login_with_google.rs  mod.rs
backend/api/src/routers/: auth_router.rs
backend/api/src/utils/: db_connect.rs  encrypt.rs  export_envs.rs  middleware.rs  mod.rs
backend/entities/: Cargo.toml
backend/entities/src/: cloud_account.rs  lib.rs  prelude.rs  quota.rs  user.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
backend/libs/common/: Cargo.toml
backend/libs/common/src/: db_connect.rs  encrypt.rs  export_envs.rs  jwt_config.rs  lib.rs  redis_connection.rs
backend/libs/entities/src/: cloud_account.rs  job.rs  lib.rs  prelude.rs  quota.rs  sea_orm_active_enums.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251101_100506_create_more_required_tables.rs  m20251104_122027_adding_sub_for_oauth_in_users.rs  m20251105_154841_add_sub_field_to_cloud_account.rs  m20251111_155841_user_to_users.rs  m20251126_165431_add_refresh_token_expired_field_to_cloud_accounts.rs  m20251210_150222_add_image_to_cloud_account.rs  m20251225_162600_add_transfer_table.rs  main.rs  user.rs
backend/services/api/: .env.example  Cargo.toml
backend/services/api/src/: main.rs
backend/services/api/src/handlers/: mod.rs
backend/services/api/src/handlers/auth/: add_google_drive.rs  get_cookie.rs  jwt_config.rs  login_with_google.rs  mod.rs
backend/services/api/src/handlers/cloud/: copy_google.rs  get_cloud_accounts.rs  get_shared_drive.rs  google_drive_file_structure.rs  google_get_folders.rs  mod.rs
backend/services/api/src/routers/: auth_router.rs  cloud_router.rs  mod.rs
backend/services/api/src/utils/: app_errors.rs  google_search_folder.rs  middleware.rs  mod.rs
backend/services/refresh-worker/: Cargo.toml
backend/services/refresh-worker/src/: handle_refresh.rs  main.rs
backend/services/transfer-worker/: Cargo.toml
backend/services/transfer-worker/src/: job.rs  main.rs
backend/services/transfer-worker/src/handlers/: google_to_google.rs  mega_to_google.rs  mod.rs
backend/services/ws/: Cargo.toml
backend/services/ws/src/: main.rs
backend/services/ws/src/handlers/: mod.rs  upgrade_to_ws.rs  ws_handle.rs  ws_handler.rs
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/(clouds)/: layout.tsx
frontend/app/(clouds)/drive/[...ids]/: page.tsx
frontend/app/(clouds)/drive/[id]/: page.tsx
frontend/app/(clouds)/google/[driveId]/: page.tsx
frontend/app/(clouds)/google/[id]/: page.tsx
frontend/app/(clouds)/home/: page.tsx
frontend/app/home/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: BreadCrumb.tsx  CloudAccountCard.tsx  CustomButton.tsx  DriveComponent.tsx  DriveTree.tsx  FileItem.tsx  GoogleComponent.tsx  GoogleDrives.tsx  HomeComponent.tsx  StorageBar.tsx  TreeNode.tsx  WSProvider.tsx
frontend/lib/: export.ts  ws-client.ts
frontend/stores/auth/: types.ts  useAuthStore.ts
frontend/stores/cloud/: types.ts  useCloudStore.ts
frontend/utils/: axiosInstance.ts  format.ts
src/: main.rs
templates/: hello.html
