[workspace]
resolver = "3"
members = ["services/api", "libs/entities", "migration", "services/ws", "libs/common", "services/refresh-worker", "services/transfer-worker"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
entities = { path = "libs/entities" }
common = { path = "libs/common" }
serde = "1.0.228"
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
