[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http2"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { workspace = true }
sea-orm = { version = "2.0.0-rc.16", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.31"
once_cell = "1.21.3"
log = "0.4.28"
entities = { workspace = true }

