[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
once_cell = "1.21.3"
aes-gcm = "0.10.3"
sea-orm = { version = "2.0.0-rc.16", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
tokio = { workspace = true }
log = "0.4.28"
thiserror = "2.0.17"
dotenvy = "0.15.7"
serde = "1.0.228"
uuid = { version = "1.18.1", features = ["v4"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"


