[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http2"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { workspace = true }
sea-orm = { version = "2.0.0-rc.16", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.31"
once_cell = "1.21.3"
log = "0.4.28"
entities = { workspace = true }
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["json"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.1", features = ["cookie"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"

