[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = "0.28.0"
tokio = { workspace = true }
axum = { version = "0.8.7", features = ["ws"] }
redis = { version = "0.32.7", features = ["tokio-comp", "aio"] }
tungstenite = "0.28.0"
cookie = "0.18.1"
tower = "0.5.2"
serde = { workspace = true, features = ["derive"] }
common = { workspace = true }
hyper = "1.8.1"
hyper-util = "0.1.18"
chrono = "0.4.42"
futures-util = "0.3.31"
bytes = "1.11.0"
# futures = "0.3.31"
